# GTDroid

./: .gitmodules  CMakeLists.txt  README.md  build.release.sh  build.sh  run.sh
src/: main.cpp
